--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>HTML Images</title>
-  </head>
-  <body>
-    <!-- Your code here -->
-  </body>
+</head>
+<body>
+    <!-- First <img> element with just src -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" />
+
+    <!-- Second <img> element with src and alt -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Lions photo" />
+
+    <!-- Third <img> element with src, alt, and title -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Lions photo" title="National Park" />
+</body>
 </html>
